# Marketing-Agent-Demo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATUS.txt  README.md  dev.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  verify_project.py
.github/workflows/: ci-cd.yml
docs/guides/: BRAND_VOICE_GUIDE.md  DOCKER_DEMO_GUIDE.md  DOCKER_TEST_COMMANDS.md  GETTING_STARTED.md  HTML_REPORT_GUIDE.md  MULTI_AGENT_GUIDE.md  QUICKSTART.md
docs/internal/: BRAND_VOICE_IMPLEMENTATION.md  HTML_REPORT_SUMMARY.md  MULTI_AGENT_IMPLEMENTATION.md  MULTI_AGENT_STATUS.txt  PROJECT_SUMMARY.md
docs/specs/: ARCHITECTURE_SPEC.md
examples/: __init__.py  api_usage.py  brand_voice_usage.py  compare_workflows.py  direct_agent.py  direct_agent_brand_voice.py  multi_agent_demo.py  multi_agent_with_report.py
knowledge_base/: README.md  __init__.py  ecolife_brand_voice.txt  financewise_brand_voice.txt  techcorp_brand_voice.txt
scripts/: dev.py  run.py  verify_project.py
src/agents/: __init__.py
src/agents/marketing/: __init__.py  agent.py  api.py  brand_voice.py  critique_agent.py  models.py  multi_agent_flow.py  planner_agent.py  tools.py  writer_agent.py
src/gateway/: __init__.py  inference_gateway.py  models.py
src/shared/: __init__.py  config.py  console.py  database.py  html_reporter.py  logger.py  trace_logger.py
tests/: conftest.py
tests/evaluation/: __init__.py  evaluate_agent.py
tests/unit/: __init__.py  test_agent.py  test_api.py  test_brand_voice.py  test_evaluation.py  test_gateway.py  test_multi_agent.py  test_shared.py
